lib/ein/src/compile/type_inference/snapshots/ein__compile__type_inference__type_inferrer__tests__infer_types_with_imported_reference_types.snap
---
source: lib/ein/src/compile/type_inference/type_inferrer.rs
expression: infer_types(&module)
---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [],
        definitions: [
            VariableDefinition(
                VariableDefinition {
                    name: "x",
                    body: Number(
                        Number {
                            value: 42.0,
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    type_: Reference(
                        Reference {
                            name: "Foo",
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        imports: [
            Import {
                module_interface: ModuleInterface {
                    path: ModulePath {
                        package: Package {
                            name: "P",
                            version: "",
                        },
                        components: [],
                    },
                    exported_names: {},
                    types: {
                        "Foo": Number(
                            Number {
                                source_information: SourceInformation {
                                    source_name: "",
                                    location: Location {
                                        line_number: 0,
                                        column_number: 0,
                                    },
                                    line: "",
                                },
                            },
                        ),
                    },
                    functions: {},
                    variables: {},
                },
                qualified: true,
            },
        ],
        ffi_imports: [],
    },
)
